<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu"
        android:orderInCategory="100"
        android:title="@string/main_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/restaurants"
        android:orderInCategory="100"
        android:title="@string/restaurants"
        app:showAsAction="never" />
    <item
        android:id="@+id/sights"
        android:orderInCategory="100"
        android:title="@string/sights"
        app:showAsAction="never" />
    <item
        android:id="@+id/hotels"
        android:orderInCategory="100"
        android:title="@string/hotels"
        app:showAsAction="never" />
</menu>