<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/main_image_nagold"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/nagold"
                android:scaleType="centerCrop"
                android:src="@drawable/nagoldmainactivity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buttons_set"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorDeepBlue"
                app:layout_constraintTop_toBottomOf="@+id/main_image_nagold" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <ImageView
                android:id="@+id/icon_hotel"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:src="@drawable/hotel"
                app:layout_constraintEnd_toStartOf="@id/gl1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                style="@style/textMainIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_bottom_margin"
                android:text="@string/hotels"
                app:layout_constraintEnd_toStartOf="@id/gl1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_hotel" />

            <ImageView
                android:id="@+id/icon_restaurants"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:src="@drawable/restaurants"
                app:layout_constraintEnd_toStartOf="@id/gl2"
                app:layout_constraintStart_toStartOf="@id/gl1"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                style="@style/textMainIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:text="@string/restaurants"
                app:layout_constraintEnd_toStartOf="@id/gl2"
                app:layout_constraintStart_toStartOf="@id/gl1"
                app:layout_constraintTop_toBottomOf="@+id/icon_restaurants" />

            <ImageView
                android:id="@+id/icon_thingsToDo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:src="@drawable/things_to_do"
                app:layout_constraintEnd_toEndOf="@id/gl3"
                app:layout_constraintStart_toStartOf="@id/gl2"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                style="@style/textMainIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_bottom_margin"
                android:text="@string/what_to_do"
                app:layout_constraintEnd_toEndOf="@id/gl3"
                app:layout_constraintStart_toStartOf="@id/gl2"
                app:layout_constraintTop_toBottomOf="@+id/icon_thingsToDo" />

            <ImageView
                android:id="@+id/icon_grocery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:src="@drawable/grocery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/gl3"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                style="@style/textMainIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/activity_bottom_margin"
                android:text="@string/grocery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/gl3"
                app:layout_constraintTop_toBottomOf="@+id/icon_thingsToDo" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="@id/gl1"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="@id/gl2"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:background="#FFFFFF"
                app:layout_constraintStart_toStartOf="@id/gl3"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:id="@+id/hotels_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toStartOf="@id/gl1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:id="@+id/restaurants_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toStartOf="@id/gl2"
                app:layout_constraintStart_toStartOf="@id/gl1"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:id="@+id/things_to_do_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="@id/gl3"
                app:layout_constraintStart_toStartOf="@id/gl2"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:id="@+id/grocery_button"
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/gl3"
                app:layout_constraintTop_toBottomOf="@id/main_image_nagold" />

            <TextView
                android:id="@+id/textHeader"
                style="@style/textHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_bottom_margin"
                android:layout_marginTop="@dimen/activity_bottom_margin"
                android:text="@string/nagold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttons_set" />

            <TextView
                android:id="@+id/nagold_article"
                style="@style/textMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_bottom_margin"
                android:layout_marginTop="@dimen/activity_bottom_margin"
                android:layout_marginEnd="@dimen/activity_bottom_margin"
                android:text="@string/nagold_ist_eine_stadt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textHeader" />

            <TextView
                android:id="@+id/textHeaderDinner"
                style="@style/textHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_bottom_margin"
                android:layout_marginTop="@dimen/activity_bottom_margin"
                android:text="@string/good_for_dinner_in_nagold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nagold_article" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@color/colorDeepBlue"
                app:layout_constraintTop_toBottomOf="@id/textHeaderDinner"
                app:tabTextColor="#FFFFFF" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/restaurants"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:background="@color/colorDeepBlue"
                app:layout_constraintTop_toBottomOf="@id/tab_layout_restaurant" />

            <TextView
                android:id="@+id/textHeaderSights"
                style="@style/textHeader2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_bottom_margin"
                android:layout_marginTop="@dimen/activity_bottom_margin"
                android:text="@string/sights_and_landmarks_in_nagold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restaurants" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_sights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:background="@color/colorDeepBlue"
                app:layout_constraintTop_toBottomOf="@id/textHeaderSights"
                app:tabTextColor="#FFFFFF" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/things_to_do"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:layout_marginBottom="@dimen/activity_bottom_margin"
                android:background="@color/colorDeepBlue"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout_sights" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>